# historic_sys

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
src/: main.rs
src/controllers/: gpt_controller.rs  mod.rs
src/database/migrations/: 0002_files_table.sql  0003_messages_table.sql  0005_chat_file_table.sql  0006_add_foreign_relation.sql  1001_chats_table.sql  1002_files_table.sql  1004_user_table.sql  1005_chat_file_table.sql  1006_add_foreign_relation.sql  1007_client_table.sql
src/database/postgres/: mod.rs
src/entities/: mod.rs
src/entities/chat/: controller.rs  mod.rs  model.rs  service.rs
src/entities/client/: controller.rs  mod.rs  model.rs
src/entities/file/: controller.rs  mod.rs  model.rs  recive_files.rs  service.rs
src/entities/gpt/: mod.rs  model.rs  service.rs
src/entities/message/: controller.rs  mod.rs  model.rs  service.rs
src/entities/user/: controller.rs  mod.rs  model.rs  service.rs
src/middleware/jwt/: mod.rs
src/routes/: mod.rs
src/traits/: crud.rs
src/traits/crud/: mod.rs
