[package]
name = "historic_sys"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4"
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sqlx = { version = "0.7.4", features = ["chrono", "postgres", "runtime-async-std", "runtime-async-std-native-tls", "uuid"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
