[package]
name = "historic_sys"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4"
actix-multipart = "0.5"
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sqlx = { version = "0.8.2", features = ["chrono", "postgres", "runtime-tokio-native-tls", "uuid"] }
sqlformat = "=0.2.6" 
uuid = { version = "1.10.0", features = ["serde", "v4"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "multipart"] }
# openssl = { version = "0.10", features = ["vendored"] }
sanitize-filename = "0.5.0"
tokio = { version = "1", features = ["full"] }
actix-web-httpauth = "0.8.0"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.6"
pdf-extract = "0.7.10"
dotext_ed8fc7b = "0.1.2"
